--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.1.2",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-countdown-circle-timer": "^3.1.0",
+    "react-countdown-clock": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
